--- a/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-westend/Cargo.toml
@@ -41,6 +41,7 @@ pallet-bridge-relayers = { workspace = true }
 # Cumulus
 asset-hub-westend-runtime = { workspace = true }
 bp-asset-hub-westend = { workspace = true }
+bridge-hub-common = { workspace = true }
 bridge-hub-westend-runtime = { workspace = true }
 cumulus-pallet-parachain-system = { workspace = true }
 cumulus-pallet-xcmp-queue = { workspace = true }
