[XCM] add generic location to account converter that also works with external ecosystems (#7313)
I added a new `ExternalConsensusLocationsConverterFor` struct to handle
external global consensus locations and their child locations.
This struct extends the functionality of existing converters
(`GlobalConsensusParachainConvertsFor` and
`EthereumLocationsConverterFor`) while maintaining backward
compatibility.

Fixes https://github.com/paritytech/polkadot-sdk/issues/7129

Polkadot address: 121HJWZtD13GJQPD82oEj3gSeHqsRYm1mFgRALu4L96kfPD1

---------

Co-authored-by: Adrian Catangiu <adrian@parity.io>
Co-authored-by: ndk <ndk@parity.io>

--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -99,6 +99,7 @@ snowbridge-router-primitives.workspace = true
 [dev-dependencies]
 asset-test-utils = { default-features = true, path = "../test-utils" }
 parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
+sp-io = { workspace = true, default-features = true }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
