--- a/bridges/snowbridge/primitives/router/Cargo.toml
+++ b/bridges/snowbridge/primitives/router/Cargo.toml
@@ -21,6 +21,7 @@ sp-io.workspace = true
 sp-runtime.workspace = true
 sp-std.workspace = true
 xcm.workspace = true
+xcm-builder.workspace = true
 xcm-executor.workspace = true
 snowbridge-core.workspace = true
 
@@ -40,6 +41,7 @@ std = [
 	"sp-io/std",
 	"sp-runtime/std",
 	"sp-std/std",
+	"xcm-builder/std",
 	"xcm-executor/std",
 	"xcm/std",
 ]
@@ -47,6 +49,7 @@ runtime-benchmarks = [
 	"frame-support/runtime-benchmarks",
 	"snowbridge-core/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
+	"xcm-builder/runtime-benchmarks",
 	"xcm-executor/runtime-benchmarks",
 	"xcm/runtime-benchmarks",
 ]
