--- a/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-rococo/Cargo.toml
@@ -24,6 +24,7 @@ sp-core.workspace = true
 sp-runtime.workspace = true
 pallet-xcm.workspace = true
 xcm.workspace = true
+xcm-builder.workspace = true
 xcm-executor.workspace = true
 xcm-runtime-apis.workspace = true
 pallet-bridge-messages.workspace = true
