update build script

--- a/substrate/frame/revive/fixtures/Cargo.toml
+++ b/substrate/frame/revive/fixtures/Cargo.toml
@@ -21,9 +21,13 @@ sp-core = { workspace = true, default-features = true, optional = true }
 sp-io = { workspace = true, default-features = true, optional = true }
 
 [build-dependencies]
+cargo_metadata = { workspace = true }
 anyhow = { workspace = true, default-features = true }
 polkavm-linker = { version = "0.21.0" }
 toml = { workspace = true }
+pallet-revive-uapi = { workspace = true }
+# pallet-revive-fixtures-common = { workspace = true }
+
 
 [features]
 default = ["std"]
