--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -32,3 +32,4 @@ targets = ["riscv64imac-unknown-none-elf"]
 default = ["scale"]
 scale = ["dep:codec", "scale-info"]
 unstable-hostfn = []
+fixtures = ["unstable-hostfn"]
