--- a/.github/workflows/release-reusable-promote-to-final.yml
+++ b/.github/workflows/release-reusable-promote-to-final.yml
@@ -56,8 +56,11 @@ jobs:
           if [[ ${{ inputs.package }} == 'polkadot' ]]; then
             packages=(polkadot polkadot-prepare-worker polkadot-execute-worker)
             for package in "${packages[@]}"; do
+              OUTPUT_DIR="./release-artifacts/${{ inputs.target }}/${package}"
               fetch_release_artifacts_from_s3 $package ${{ inputs.target }}
             done
+            NODE_VERSION="$(get_polkadot_node_version_from_code)"
+            fetch_debian_package_from_s3 polkadot
           else
             fetch_release_artifacts_from_s3 ${{ inputs.package }} ${{ inputs.target }}
           fi
