slot-based-collator: Allow multiple blocks per slot (#7569)
**Summary:** This PR enables authoring of multiple blocks in one AURA
slot in the slot-based collator and stabilizes the slot-based collator.

## CLI Changes
The flag `--experimental-use-slot-based` is now marked as deprecated. I
opted to introduce `--authoring slot-based` instead of just removing the
`experimental` prefix. By introducing the `authoring` variant, we get
some future-proofing in case we want to introduce further options.

## Change Description
With elastic-scaling, we are able to author multiple blocks with a
single relay-chain parent. In the initial iteration, the interval
between two blocks was determined by the `slot_duration` of the
parachain. This PR introduces a more flexible model, where we try to
author multiple blocks in a single slot if the runtime allows it.

The block authoring loop is largely the same. The
[`SlotTimer`](https://github.com/paritytech/polkadot-sdk/blob/f1935bd96752866d52795608206e6a436929107e/cumulus/client/consensus/aura/src/collators/slot_based/slot_timer.rs#L48-L48)
now lives in a separate module and is updated with the last seen [core
count](https://github.com/paritytech/polkadot-sdk/blob/f1935bd96752866d52795608206e6a436929107e/cumulus/client/consensus/aura/src/collators/slot_based/block_builder_task.rs#L231-L231).
It will then trigger rounds in the block-building loop based on the core
count.

This allows some flexibility where elastic-scaling chains can run on a
single core in quiet times. Previously, running on 1 core with a 3-core
elastic-scaling chain would result in authors getting skipped because
the `slot_duration` was too low.

## Parameter Considerations
The core logic does not change, so there are a few things to consider:
- The `ConsensusHook` implementation still determines how many blocks
are allowed per relay-chain block. So if you add arbitrary cores to an
async-backing, 6-second parachain, `can_build_upon` in the runtime will
deny block-buildi

--- a/cumulus/zombienet/zombienet-sdk/Cargo.toml
+++ b/cumulus/zombienet/zombienet-sdk/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "polkadot-zombienet-sdk-tests"
+name = "cumulus-zombienet-sdk-tests"
 version = "0.1.0"
-description = "Zomebienet-sdk tests."
+description = "Zomebienet-sdk tests for cumulus."
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -10,7 +10,6 @@ publish = false
 [dependencies]
 anyhow = { workspace = true }
 codec = { workspace = true, features = ["derive"] }
-cumulus-zombienet-sdk-helpers = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
 polkadot-primitives = { workspace = true, default-features = true }
@@ -19,12 +18,8 @@ serde_json = { workspace = true }
 subxt = { workspace = true }
 subxt-signer = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
-tokio-util = { workspace = true, features = ["time"] }
 zombienet-sdk = { workspace = true }
+cumulus-zombienet-sdk-helpers = { workspace = true }
 
 [features]
-zombie-metadata = []
-
-[build-dependencies]
-substrate-build-script-utils = { workspace = true, default-features = true }
-subwasmlib = { git = "https://github.com/chevdor/subwasm", rev = "v0.21.3" }
+zombie-ci = []
