--- a/cumulus/client/consensus/aura/Cargo.toml
+++ b/cumulus/client/consensus/aura/Cargo.toml
@@ -62,6 +62,7 @@ polkadot-primitives = { workspace = true, default-features = true }
 [dev-dependencies]
 cumulus-test-client = { workspace = true }
 cumulus-test-relay-sproof-builder = { workspace = true }
+rstest = { workspace = true }
 sp-keyring = { workspace = true }
 
 [features]
