--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -47,7 +47,7 @@ jobs:
     steps:
       - id: get-rust-versions
         run: |
-          RUST_STABLE_VERSION=$(curl -sS https://raw.githubusercontent.com/paritytech/dockerfiles/refs/heads/main/ci-unified/Dockerfile | grep -oP 'ARG RUST_STABLE_VERSION=\K[^ ]+')
+          RUST_STABLE_VERSION=$(grep -oP '(?<=-)[0-9]+\.[0-9]+\.[0-9]+(?=-)' .github/env)
           echo "stable=$RUST_STABLE_VERSION" >> $GITHUB_OUTPUT
 
   build-runtimes:
