--- a/.github/workflows/release-reusable-promote-to-final.yml
+++ b/.github/workflows/release-reusable-promote-to-final.yml
@@ -35,6 +35,9 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_RELEASE_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_RELEASE_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      RELEASE_TAG: ${{ inputs.release_tag }}
+      PACKAGE: ${{ inputs.package }}
+      TARGET: ${{ inputs.target }}
 
     steps:
       - name: Checkout sources
@@ -44,7 +47,7 @@ jobs:
         id: prepare_final_tag
         shell: bash
         run: |
-          tag="$(echo ${{ inputs.release_tag }} | sed 's/-rc[0-9]*$//')"
+          tag="$(echo $RELEASE_TAG | sed 's/-rc[0-9]*$//')"
           echo $tag
           echo "FINAL_TAG=${tag}" >> $GITHUB_OUTPUT
 
@@ -52,17 +55,17 @@ jobs:
         run: |
           . ./.github/scripts/common/lib.sh
 
-          VERSION="${{ inputs.release_tag }}"
-          if [[ ${{ inputs.package }} == 'polkadot' ]]; then
+          VERSION="$RELEASE_TAG"
+          if [[ "$PACKAGE" == 'polkadot' ]]; then
             packages=(polkadot polkadot-prepare-worker polkadot-execute-worker)
             for package in "${packages[@]}"; do
-              OUTPUT_DIR="./release-artifacts/${{ inputs.target }}/${package}"
-              fetch_release_artifacts_from_s3 $package ${{ inputs.target }}
+              OUTPUT_DIR="./release-artifacts/$TARGET/${package}"
+              fetch_release_artifacts_from_s3 "$package" "$TARGET"
             done
             NODE_VERSION="$(get_polkadot_node_version_from_code)"
             fetch_debian_package_from_s3 polkadot
           else
-            fetch_release_artifacts_from_s3 ${{ inputs.package }} ${{ inputs.target }}
+            fetch_release_artifacts_from_s3 "$PACKAGE" "$TARGET"
           fi
 
       - name: Configure AWS Credentials
@@ -76,11 +79,11 @@ jobs:
         run: |
           . ./.github/scripts/release/release_lib.sh
 
-          if [[ ${{ inputs.package }} == 'polkadot' ]]; then
+          if [[ "$PACKAGE" == 'polkadot' ]]; then
             packages=(polkadot polkadot-prepare-worker polkadot-execute-worker)
             for package in "${packages[@]}"; do
               upload_s3_release $package ${{ steps.prepare_final_tag.outputs.final_tag }} ${{ inputs.target }}
             done
           else
-            upload_s3_release ${{ inputs.package }} ${{ steps.prepare_final_tag.outputs.final_tag }} ${{ inputs.target }}
+            upload_s3_release "$PACKAGE" ${{ steps.prepare_final_tag.outputs.final_tag }} "$TARGET"
           fi
