network: Make litep2p the default backend in Kusama (#7866)
This PR makes the litep2p backend the default network backend in Kusama.

We performed a gradual rollout in Kusama by asking validators to
manually switch to litep2p. The rollout went smoothly, with 250
validators running litep2p without issues. This PR represents the next
step in testing the backend at scale.

Thanks to everyone who contributed to making this happen! A special
shoutout to the validators for their prompt support and cooperation 🙏

While at it, the litep2p release is bumped to the latest 0.9.2, which
downgrades a spamming log to debug.

```
RUST_LOG=info ./target/release/polkadot --chain kusama --pruning=1000 --in-peers 50 --out-peers 50 --sync=warp --detailed-log-output
2025-03-10 14:24:18.503  INFO main sub-libp2p: Running litep2p network backend

RUST_LOG=info ./target/release/polkadot --chain kusama --pruning=1000 --in-peers 50 --out-peers 50 --sync=warp --detailed-log-output --network-backend libp2p
INFO main sub-libp2p: Running libp2p network backend

RUST_LOG=info ./target/release/polkadot --chain kusama --pruning=1000 --in-peers 50 --out-peers 50 --sync=warp --detailed-log-output --network-backend litep2p
INFO main sub-libp2p: Running litep2p network backend

RUST_LOG=info ./target/release/polkadot --chain polkadot --pruning=1000 --in-peers 50 --out-peers 50 --sync=warp --detailed-log-output
2025-03-10 14:27:03.762  INFO main sub-libp2p: Running libp2p network backend

 ```

cc @paritytech/networking

---------

Signed-off-by: Alexandru Vasile <alexandru.vasile@parity.io>
Co-authored-by: Bastian Köcher <git@kchr.de>
Signed-off-by: Alexandru Vasile <alexandru.vasile@parity.io>

--- a/cumulus/polkadot-omni-node/lib/Cargo.toml
+++ b/cumulus/polkadot-omni-node/lib/Cargo.toml
@@ -102,6 +102,7 @@ substrate-state-trie-migration-rpc.workspace = true
 substrate-state-trie-migration-rpc.default-features = true
 polkadot-cli.workspace = true
 polkadot-cli.default-features = true
+polkadot-cli.features = ["service"]
 polkadot-primitives.workspace = true
 polkadot-primitives.default-features = true
 cumulus-client-cli.workspace = true
