--- a/polkadot/zombienet_tests/functional/0001-parachains-pvf.toml
+++ b/polkadot/zombienet_tests/functional/0001-parachains-pvf.toml
@@ -10,6 +10,8 @@ limits = { memory = "4G", cpu = "2" }
 requests = { memory = "2G", cpu = "1" }
 
   [[relaychain.nodes]]
+  # Use an image that doesn't use validation v3 protocol.
+  image = "{{POLKADOT_IMAGE}}:master-4ac9c4a"
   name = "alice"
   args = [ "--alice", "-lparachain=debug,runtime=debug" ]
 
