--- a/Cargo.toml
+++ b/Cargo.toml
@@ -428,6 +428,13 @@ members = [
 	"substrate/frame/staking/reward-curve",
 	"substrate/frame/staking/reward-fn",
 	"substrate/frame/staking/runtime-api",
+	"substrate/frame/staking-next",
+	"substrate/frame/staking-next/ah-client",
+	"substrate/frame/staking-next/ahm-test",
+	"substrate/frame/staking-next/rc-client",
+	"substrate/frame/staking-next/reward-curve",
+	"substrate/frame/staking-next/reward-fn",
+	"substrate/frame/staking-next/runtime-api",
 	"substrate/frame/state-trie-migration",
 	"substrate/frame/statement",
 	"substrate/frame/sudo",
@@ -1008,6 +1015,12 @@ pallet-staking-rc-client = { path = "substrate/frame/staking/rc-client", default
 pallet-staking-reward-curve = { path = "substrate/frame/staking/reward-curve", default-features = false }
 pallet-staking-reward-fn = { path = "substrate/frame/staking/reward-fn", default-features = false }
 pallet-staking-runtime-api = { path = "substrate/frame/staking/runtime-api", default-features = false }
+pallet-staking-next= { path = "substrate/frame/staking-next", default-features = false }
+pallet-staking-next-ah-client = { path = "substrate/frame/staking-next/ah-client", default-features = false }
+pallet-staking-next-rc-client = { path = "substrate/frame/staking-next/rc-client", default-features = false }
+pallet-staking-next-reward-curve = { path = "substrate/frame/staking-next/reward-curve", default-features = false }
+pallet-staking-next-reward-fn = { path = "substrate/frame/staking-next/reward-fn", default-features = false }
+pallet-staking-next-runtime-api = { path = "substrate/frame/staking-next/runtime-api", default-features = false }
 pallet-state-trie-migration = { path = "substrate/frame/state-trie-migration", default-features = false }
 pallet-statement = { default-features = false, path = "substrate/frame/statement" }
 pallet-sudo = { path = "substrate/frame/sudo", default-features = false }
