--- a/substrate/frame/support/procedural/Cargo.toml
+++ b/substrate/frame/support/procedural/Cargo.toml
@@ -31,6 +31,7 @@ proc-macro2 = { workspace = true }
 quote = { workspace = true }
 sp-crypto-hashing = { workspace = true }
 syn = { features = ["full", "parsing", "visit-mut"], workspace = true }
+log = { workspace = true, default-features = false }
 
 [dev-dependencies]
 codec = { features = [
@@ -61,6 +62,7 @@ std = [
 	"sp-crypto-hashing/std",
 	"sp-io/std",
 	"sp-metadata-ir/std",
+	"log/std",
 	"sp-runtime/std",
 ]
 no-metadata-docs = []
