pallet-revive: remove related crates from umbrella
Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

--- a/substrate/frame/revive/mock-network/Cargo.toml
+++ b/substrate/frame/revive/mock-network/Cargo.toml
@@ -9,6 +9,9 @@ repository.workspace = true
 description = "A mock network for testing pallet-revive."
 publish = false
 
+[package.metadata.polkadot-sdk]
+exclude-from-umbrella = true
+
 [lints]
 workspace = true
 
