--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -26,7 +26,7 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Restore lychee cache
-        uses: actions/cache@v4
+        uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf # v4.2.2 (12. March 2025)
         with:
           path: .lycheecache
           key: cache-lychee-${{ github.sha }}
