format all toml files
Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

--- a/polkadot/xcm/xcm-executor/integration-tests/Cargo.toml
+++ b/polkadot/xcm/xcm-executor/integration-tests/Cargo.toml
@@ -33,4 +33,11 @@ xcm-executor = { workspace = true, default-features = true }
 
 [features]
 default = ["std"]
-std = ["frame-support/std", "frame-system/std", "pallet-sudo/std", "polkadot-runtime-parachains/std", "sp-runtime/std", "xcm/std"]
+std = [
+	"frame-support/std",
+	"frame-system/std",
+	"pallet-sudo/std",
+	"polkadot-runtime-parachains/std",
+	"sp-runtime/std",
+	"xcm/std",
+]
