--- a/cumulus/test/runtime/Cargo.toml
+++ b/cumulus/test/runtime/Cargo.toml
@@ -100,4 +100,6 @@ elastic-scaling-500ms = []
 # A runtime with a slot duration of 6s but parameters that allow multiple blocks per slot.
 elastic-scaling-multi-block-slot = []
 # A runtime with 6s slot duration which sends RFC-103 compatible UMP signals.
-experimental-ump-signals = ["cumulus-pallet-parachain-system/experimental-ump-signals"]
+experimental-ump-signals = [
+	"cumulus-pallet-parachain-system/experimental-ump-signals",
+]
