--- a/substrate/frame/staking/Cargo.toml
+++ b/substrate/frame/staking/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-staking"
-version = "38.0.0"
+version = "38.0.1"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
@@ -46,7 +46,7 @@ substrate-test-utils = { path = "../../test-utils" }
 frame-benchmarking = { default-features = true, path = "../benchmarking" }
 frame-election-provider-support = { default-features = true, path = "../election-provider-support" }
 rand_chacha = { workspace = true, default-features = true }
-frame-support = { features = ["experimental"], default-features = true, workspace = true }
+frame-support = { features = ["experimental"], default-features = true, path = "../support" }
 
 [features]
 default = ["std"]
