--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -125,79 +125,79 @@ jobs:
           body_path: ${{ github.workspace}}/scripts/release/RELEASE_DRAFT.md
           draft: true
 
-  publish-runtimes:
-    needs: [ build-runtimes, publish-release-draft ]
-    continue-on-error: true
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{ fromJSON(needs.build-runtimes.outputs.published_runtimes) }}
+  # publish-runtimes:
+  #   needs: [ build-runtimes, publish-release-draft ]
+  #   continue-on-error: true
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix: ${{ fromJSON(needs.build-runtimes.outputs.published_runtimes) }}
 
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.0.0
+  #   steps:
+  #     - name: Checkout sources
+  #       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.0.0
 
-      - name: Download artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
 
-      - name: Get runtime info
-        env:
-          JSON: release-notes-context/${{ matrix.chain }}-runtime/${{ matrix.chain }}-srtool-digest.json
-        run: |
-          >>$GITHUB_ENV echo ASSET=$(find ${{ matrix.chain }}-runtime -name '*.compact.compressed.wasm')
-          >>$GITHUB_ENV echo SPEC=$(<${JSON} jq -r .runtimes.compact.subwasm.core_version.specVersion)
+  #     - name: Get runtime info
+  #       env:
+  #         JSON: release-notes-context/${{ matrix.chain }}-runtime/${{ matrix.chain }}-srtool-digest.json
+  #       run: |
+  #         >>$GITHUB_ENV echo ASSET=$(find ${{ matrix.chain }}-runtime -name '*.compact.compressed.wasm')
+  #         >>$GITHUB_ENV echo SPEC=$(<${JSON} jq -r .runtimes.compact.subwasm.core_version.specVersion)
 
-      - name: Upload compressed ${{ matrix.chain }} v${{ env.SPEC }} wasm
-        if: ${{ matrix.chain  != 'rococo-parachain' }}
-        uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 #v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.publish-release-draft.outputs.asset_upload_url }}
-          asset_path: ${{ env.ASSET }}
-          asset_name: ${{ matrix.chain }}_runtime-v${{ env.SPEC }}.compact.compressed.wasm
-          asset_content_type: application/wasm
+  #     - name: Upload compressed ${{ matrix.chain }} v${{ env.SPEC }} wasm
+  #       if: ${{ matrix.chain  != 'rococo-parachain' }}
+  #       uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 #v1.0.2
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ needs.publish-release-draft.outputs.asset_upload_url }}
+  #         asset_path: ${{ env.ASSET }}
+  #         asset_name: ${{ matrix.chain }}_runtime-v${{ env.SPEC }}.compact.compressed.wasm
+  #         asset_content_type: application/wasm
 
-  publish-binaries:
-    needs: [ publish-release-draft, build-binaries ]
-    continue-on-error: true
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        binary: [frame-omni-bencher, chain-spec-builder]
+  # publish-binaries:
+  #   needs: [ publish-release-draft, build-binaries ]
+  #   continue-on-error: true
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       binary: [frame-omni-bencher, chain-spec-builder]
 
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-        with:
-          name: ${{ matrix.binary }}
+  #   steps:
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+  #       with:
+  #         name: ${{ matrix.binary }}
 
-      - name: Upload ${{ matrix.binary }} binary
-        uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 #v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.publish-release-draft.outputs.asset_upload_url }}
-          asset_path:  ${{ github.workspace}}/${{ matrix.binary }}
-          asset_name:  ${{ matrix.binary }}
-          asset_content_type: application/octet-stream
+  #     - name: Upload ${{ matrix.binary }} binary
+  #       uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 #v1.0.2
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ needs.publish-release-draft.outputs.asset_upload_url }}
+  #         asset_path:  ${{ github.workspace}}/${{ matrix.binary }}
+  #         asset_name:  ${{ matrix.binary }}
+  #         asset_content_type: application/octet-stream
 
-  post_to_matrix:
-    runs-on: ubuntu-latest
-    needs: publish-release-draft
-    environment: release
-    strategy:
-      matrix:
-        channel:
-          - name: "Team: RelEng Internal"
-            room: '!GvAyzgCDgaVrvibaAF:parity.io'
+  # post_to_matrix:
+  #   runs-on: ubuntu-latest
+  #   needs: publish-release-draft
+  #   environment: release
+  #   strategy:
+  #     matrix:
+  #       channel:
+  #         - name: "Team: RelEng Internal"
+  #           room: '!GvAyzgCDgaVrvibaAF:parity.io'
 
-    steps:
-      - name: Send Matrix message to ${{ matrix.channel.name }}
-        uses: s3krit/matrix-message-action@70ad3fb812ee0e45ff8999d6af11cafad11a6ecf # v0.0.3
-        with:
-          room_id: ${{ matrix.channel.room }}
-          access_token: ${{ secrets.RELEASENOTES_MATRIX_V2_ACCESS_TOKEN }}
-          server: m.parity.io
-          message: |
-            **New version of polkadot tagged**: ${{ github.ref_name }}<br/>
-            Draft release created: ${{ needs.publish-release-draft.outputs.release_url }}
+  #   steps:
+  #     - name: Send Matrix message to ${{ matrix.channel.name }}
+  #       uses: s3krit/matrix-message-action@70ad3fb812ee0e45ff8999d6af11cafad11a6ecf # v0.0.3
+  #       with:
+  #         room_id: ${{ matrix.channel.room }}
+  #         access_token: ${{ secrets.RELEASENOTES_MATRIX_V2_ACCESS_TOKEN }}
+  #         server: m.parity.io
+  #         message: |
+  #           **New version of polkadot tagged**: ${{ github.ref_name }}<br/>
+  #           Draft release created: ${{ needs.publish-release-draft.outputs.release_url }}
