--- a/cumulus/zombienet/examples/small_network.toml
+++ b/cumulus/zombienet/examples/small_network.toml
@@ -25,4 +25,4 @@ name = "charlie"
 validator = true
 image = "parity/polkadot-parachain:latest"
 command = "polkadot-parachain"
-args = ["--force-authoring"]
+args = ["--force-authoring", "-lparachain=debug,aura::cumulus=debug", "--export-pov-to-path=/home/sebastian/work/repos/polkadot-sdk/povs"]
